# brave-vault

./: .envrc.example  .gitignore  Cargo.toml  Makefile  README.md
crates/app/: package-lock.json  package.json  vite.config.js
crates/app/src-tauri/: Cargo.toml  tauri.conf.json
crates/app/src-tauri/capabilities/: default.json
crates/app/src-tauri/icons/: icon.icns
crates/app/src-tauri/src/: lib.rs  main.rs
crates/app/src-ui/: App.jsx  index.html  main.jsx  styles.css
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/proto/: brave_sync.proto
crates/core/src/: config.rs  favicon.rs  lib.rs  session.rs
crates/core/src/crypto/: auth.rs  keybag.rs  mod.rs  nigori.rs  pwgen.rs  seed.rs  time_words.rs
crates/core/src/model/: mod.rs
crates/core/src/sync/: client.rs  commit.rs  mod.rs  proto.rs
crates/core/src/vault/: mod.rs
scripts/: build-linux.sh
