[package]
name = "brave_vault_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "brave_vault_core"
path = "src/lib.rs"

[dependencies]
# BIP39 seed <-> mnemonic
bip39 = "2"
# ed25519 signing for the sync auth token
ed25519-dalek = "2"
# key derivation / hashing
hkdf = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
scrypt = "0.11"
# Nigori cipher: AES-128-CBC
aes = "0.8"
cbc = "0.1"
# protobuf runtime
prost = "0.13"
# HTTP
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
bytes = "1"
# favicon decode/resize
image = { version = "0.25", default-features = false, features = ["png", "ico", "jpeg", "gif", "webp"] }
# at-rest vault
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
# encoding / misc
base64 = "0.22"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
