[package]
name = "brave_vault_app"
version = "0.1.0"
edition = "2021"

[lib]
name = "brave_vault_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "brave_vault"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
brave_vault_core = { path = "../../core" }
